--- a/style.css
+++ b/style.css
@@ -14,7 +14,10 @@ a {
 }
 
 .header {
+  position: fixed;
+  top: 0;
   height: 50px;
+  width: 100vw;
   background-color: black;
   text-align: center;
   padding-top: 10px;
@@ -67,6 +70,7 @@ a {
   background-size: cover;
   text-align: center;
   padding-top: 50px;
+  margin-top: 50px;
 }
 .logo img {
   border-radius: 50%;
@@ -98,27 +102,6 @@ a {
   font-size: 40px;
   text-align: center;
 }
-.content__card P {
-  font-size: 20px;
-  padding: 15px;
-  text-align: left;
-}
-
-.certificates {
-  margin-top: 50px;
-}
-.certificates h2 {
-  text-align: center;
-  font-size: 35px;
-}
-.certificates__img {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 70px;
-}
-.certificates__img img {
-  width: 400px;
-}
 
 .footer__contacts {
   padding-top: 50px;
@@ -131,8 +114,4 @@ a {
 .footer__contacts img {
   width: 70px;
   margin: 0px 20px 0px 20px;
-}
-.footer__copyright {
-  margin: 20px 0px 10px 20px;
-  font-size: 1.5em;
 }/*# sourceMappingURL=style.css.map */
