--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,10 @@ a{
     text-decoration: none;
 }
 .header{
+    position: fixed;
+    top: 0;
     height:50px;
+    width: 100vw;
     background-color: black;
     text-align: center;
     padding-top: 10px;
@@ -63,6 +66,7 @@ a{
     background-size: cover;
     text-align: center;
     padding-top: 50px;
+    margin-top: 50px;
     img{
         border-radius: 50%;
         border: 2px solid black;
@@ -91,26 +95,6 @@ a{
             font-size: 40px;
             text-align: center;
         }
-        P{
-            font-size: 20px;
-            padding: 15px;
-            text-align: left;
-        }
-    }
-}
-.certificates{
-    margin-top: 50px;
-    h2{
-        text-align: center;
-        font-size: 35px;
-    }
-    &__img{
-        display: flex;
-        justify-content: space-around;
-        margin-top: 70px;
-        img{
-            width: 400px;
-        }
     }
 }
 .footer{
@@ -125,9 +109,5 @@ a{
             width: 70px;
             margin: 0px 20px 0px 20px
         }
-    }
-    &__copyright{
-        margin: 20px 0px 10px 20px;
-        font-size: 1.5em;
     }
 }
